--- a/package.json
+++ b/package.json
@@ -5,19 +5,14 @@
     "body-parser": "~1.0.0",
     "compression": "~1.0.1",
     "connect-mongo": "mrzepinski/connect-mongo#2135988",
-    "cookie-parser": "~1.0.1",
+    "cors": "^2.3.1",
     "ejs": "~0.8.4",
     "errorhandler": "~1.0.0",
     "express": "~4.0.0",
-    "express-session": "~1.0.2",
     "jwt-simple": "^0.2.0",
-    "lodash": "~2.4.1",
     "method-override": "~1.0.0",
     "moment": "^2.6.0",
     "mongoose": "~3.8.8",
-    "morgan": "~1.0.0",
-    "passport": "~0.2.0",
-    "passport-local": "~0.1.6",
     "static-favicon": "~1.0.1"
   },
   "devDependencies": {
