--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "method-override": "~1.0.0",
     "moment": "^2.6.0",
     "mongoose": "~3.8.8",
-    "static-favicon": "~1.0.1"
+    "static-favicon": "~1.0.1",
+    "q": "^1.0.1"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
