--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "moment": "^2.6.0",
     "mongoose": "~3.8.8",
     "static-favicon": "~1.0.1",
-    "q": "^1.0.1"
+    "q": "^1.0.1",
+    "request": "^2.36.0"
   },
   "devDependencies": {
     "connect-livereload": "~0.3.0",
