--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-cookies": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
     "angular-ui-router": "~0.2.10",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "angular-ui-tree": "~2.1.4"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
