--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-sanitize": ">=1.2.*",
     "angular-ui-router": "~0.2.10",
     "bootstrap": "~3.1.1",
-    "angular-ui-tree": "~2.1.4"
+    "angular-ui-tree": "~2.1.4",
+    "angular-bootstrap": "~0.11.0",
+    "nsPopover": "~0.5.8"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
